--- a/MiniPython/app/index.html
+++ b/MiniPython/app/index.html
@@ -85,7 +85,7 @@
     var tree = null;
 
     var Visitor = require('generated/MiVisitor');
-
+    var VisitorInterprete = require('generated/VisitorInterprete');
     var ErrorListener = function(errors) {
         antlr4.error.ErrorListener.call(this);
         this.errors = errors;
@@ -113,6 +113,7 @@
         var parser = new Pgenerated.miniPythonParser(tokens);
 
         var visitor = new Visitor();
+        var visitorInterp = new VisitorInterprete();
         var msg = document.getElementById("messages");
 
 
@@ -144,6 +145,7 @@
             //console.log("Errores impresion",erroresList.imprimirErrores());
             if(visitor.listaVisitor.length == 0){
                 document.getElementById("messages").value += 'Sin errores semánticos\n\n';
+                visitorInterp.visit(tree);
             }
             else{
                 visitor.listaVisitor.forEach(function (error) {
