Arreglo del enciclamiento

--- a/MiniPython/app/index.html
+++ b/MiniPython/app/index.html
@@ -20,23 +20,12 @@
 <body background="media/fondo.jpeg">
 
 <!-- Div content -->
-    <div id="editor">
-    lista = [3,4,6]
-    def foo(a):
-        num = 3
-        if (k < 1):
-            num = 1
-        else:
-            num = num * 2
-            num = 2
-            num = 3
-        while i < 2:
-            print("a")
-        while l > "a":
-            k = 2
-        for i in lista:
-            l = a +3
+    <div id="editor">a =2
+        b = [3,4*a,6]
+        def foo():
+        lista=[3,4*a,6]
 
+        foo()
     </div>
     <div id="ace_status">
         <div id="line_indicator"><!--style="display: inline-block;" -->
