--- a/MiniPython/app/index.html
+++ b/MiniPython/app/index.html
@@ -126,6 +126,16 @@
                 document.getElementById("messages").value += (element + '\n');
             });
         }
+        else{
+            visitorInterp.visit(tree);
+            if(visitorInterp.listaVisitor.length === 0){
+                document.getElementById("messages").value += 'Sin errores de interpretación \n\n';
+            }else{
+                visitorInterp.listaVisitor.forEach(function (error) {
+                    document.getElementById("messages").value += (error + '\n');
+                });
+            }
+        }
         /*else {
             document.getElementById("messages").value = 'Sin errores de sintaxis\n\n';
             visitor.visit(tree);
@@ -143,7 +153,7 @@
             }
             //impresión del árbol
         }*/
-        visitorInterp.visit(tree);
+
     });
 
 
