Cambios para el manejo de errores y reparaciones

--- a/MiniPython/app/index.html
+++ b/MiniPython/app/index.html
@@ -128,13 +128,19 @@
         }
         else{
             visitorInterp.visit(tree);
-            if(visitorInterp.listaVisitor.length === 0){
+            console.log("PrintL", visitorInterp.getListaPrint());
+            if(visitorInterp.getListaPrint().length > 0){
+                visitorInterp.getListaPrint().forEach(function(mensaje){
+                    document.getElementById("messages").value += (mensaje + '\n');
+                });
+            }
+            /*if(visitorInterp.listaVisitor.length === 0){
                 document.getElementById("messages").value += 'Sin errores de interpretación \n\n';
             }else{
                 visitorInterp.listaVisitor.forEach(function (error) {
                     document.getElementById("messages").value += (error + '\n');
                 });
-            }
+            }*/
         }
         /*else {
             document.getElementById("messages").value = 'Sin errores de sintaxis\n\n';
