--- a/MiniPython/app/index.html
+++ b/MiniPython/app/index.html
@@ -127,13 +127,13 @@
             });
         }
         else{
-            visitorInterp.visit(tree);
+            /*visitorInterp.visit(tree);
             console.log("PrintL", visitorInterp.getListaPrint());
             if(visitorInterp.getListaPrint().length > 0){
                 visitorInterp.getListaPrint().forEach(function(mensaje){
                     document.getElementById("messages").value += (mensaje + '\n');
-                });
-            }
+                });*/
+            //}
             /*if(visitorInterp.listaVisitor.length === 0){
                 document.getElementById("messages").value += 'Sin errores de interpretación \n\n';
             }else{
@@ -160,6 +160,13 @@
             //impresión del árbol
         }*/
        // visitorInterp.visit(tree);
+       visitorInterp.visit(tree);
+            console.log("PrintL", visitorInterp.getListaPrint());
+            if(visitorInterp.getListaPrint().length > 0){
+                visitorInterp.getListaPrint().forEach(function(mensaje){
+                    document.getElementById("messages").value += (mensaje + '\n');
+                });
+            }
 
     });
 
